--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8080/radiotoday/index.html#">HOME</a>
+            <a class="nav-link active" aria-current="page" href="#home">HOME</a>
             <a class="nav-link" href="#story">STORY</a>
             <a class="nav-link" href="#products">PRODUCTS</a>
           </div>
